src/test/data/tests/const/invalid/missing_type.c
int main(void) {
    const a = 0;
    return 0;
}
